// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.extra - value[0] - Result 1`] = `mocked`;

exports[`Mock render - areas.extra - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": <div
        data-testid="area-extra"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "icon": undefined,
      "id": "areas.extra",
      "status": undefined,
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - Result 1`] = `mocked`;

exports[`Mock render - default - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "default",
      "status": undefined,
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. icon: AiFillApi - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. icon: AiFillApi - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": <AntIcon
        basePath=""
        blockId="properties. icon: AiFillApi_icon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AiFillApi"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties. icon: AiFillApi",
      "status": undefined,
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: 403 - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. status: 403 - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: 403",
      "status": "403",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: 404 - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. status: 404 - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: 404",
      "status": "404",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: 500 - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. status: 500 - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: 500",
      "status": "500",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: error - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. status: error - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: error",
      "status": "error",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: info - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. status: info - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: info",
      "status": "info",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: success  default is info - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. status: success  default is info - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: success  default is info",
      "status": "success",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: warning - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties. status: warning - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: warning",
      "status": "warning",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.subTitle: subTitle text - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties.subTitle: subTitle text - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties.subTitle: subTitle text",
      "status": undefined,
      "subTitle": <HtmlComponent
        html="subTitle text"
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - Result 1`] = `mocked`;

exports[`Mock render - properties.title - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties.title",
      "status": undefined,
      "subTitle": undefined,
      "title": <HtmlComponent
        html="Result title"
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with properties.subTitle in html - value[0] - Result 1`] = `mocked`;

exports[`Mock render - with properties.subTitle in html - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "with properties.subTitle in html",
      "status": undefined,
      "subTitle": <HtmlComponent
        html=<div style="color:green;">
  Html Subtitle
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with properties.title in html - value[0] - Result 1`] = `mocked`;

exports[`Mock render - with properties.title in html - value[0] - Result 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "with properties.title in html",
      "status": undefined,
      "subTitle": undefined,
      "title": <HtmlComponent
        html=<div style="color:red;">
  Html Title
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
    },
    Object {},
  ],
]
`;
